<resources>
    <string name="app_name">Apna News</string>
    <string name="next_text">Next</string>
    <string-array name="language_arr">
        <item>Select Language</item>
        <item>हिंदी</item>
        <item>मराठी</item>
    </string-array>
    <string name="error_language_selection">Please Select Language</string>
    <string name="prompt_username">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login_in">Login</string>
    <string name="sign_up_text">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="change_password">Change password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="email_pattern_error">Please enter valid email id</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."

    </string>
    <string name="toast_msg_state_validations">Please Select State</string>
    <string name="toast_msg_city_validations">Please Select City</string>
    <string name="toast_msg_article_validations">Please Select Article Type</string>
    <string name="toast_msg_title_validations">Please Enter Title</string>
    <string name="toast_msg_desc_validations">Please Enter Description</string>
    <string name="toast_msg_charges_validations">Please Select Duration of Post</string>
    <string name="toast_msg_desc_select">Please select Description details (in words)</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_mail">Email Id</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_mobile">Mobile number</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_mobile_no">This mobile number is invalid</string>
    <string name="error_match_password">Confirm password is not the same as password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="whiz_project_key">9uuxccl3jdqiw7aw6c2tw6p4</string>
    <string name="action_submit">Submit</string>
    <string name="prompt_title">Enter title</string>
    <string name="prompt_desc">Enter Description</string>
    <string name="description_text">Description details (in words)</string>
    <string name="words_100_str">100</string>
    <string name="words_200_str">200</string>
    <string name="words_300_str">300</string>
    <string name="words_400_str">400 and more</string>
    <string name="publishing_text">How many days publishing</string>
    <string name="day_30_str">30 days</string>
    <string name="day_60_str">60 days</string>
    <string name="day_90_str">90 days</string>
    <string name="day_120_str">120 days</string>
    <string name="photo_str">Photo</string>
    <string name="total_charges_str">Total Charges</string>
    <string name="state_lbl">State</string>
    <string name="city_lbl">City</string>
    <string name="article_lbl">Article Type</string>
    <string name="sub_article_lbl">Sub Article Type</string>
    <string name="date_lbl">Date</string>
    <string name="desc_lbl">Description</string>
    <string name="title_lbl">Title</string>
    <string name="hint_select_state">Select State</string>
    <string name="hint_select_city">Select City</string>
    <string name="hint_select_article">Select Article Category</string>
    <string name="hint_select_article_sub">Select Article Sub Category</string>
    <string name="Rs">\u20B9</string>
    <string name="pending_news">Pending News</string>
    <string name="approved_news">Approved News</string>
    <string name="rejected_news">Rejected News</string>
    <string name="request_status_toolbar_name">Request Status</string>
    <string name="recent_news">Latest News</string>
    <string name="national_inter_menu">National and International</string>
    <string name="gov_news_menu">Government News</string>
    <string name="soc_rel_menu">Social and Related News</string>
    <string name="sports_menu">Sports</string>
    <string name="sci_tech_menu">Science and Technology</string>
    <string name="eco_news_menu">Economical News</string>
    <string name="health_rel_menu">Health Related</string>
    <string name="business_news_menu">Business News</string>
    <string name="agri_news_menu">Agricultural News</string>
    <string name="cinema_menu">Cinema Related</string>
    <string name="small_class_menu">Small Classifieds</string>
    <string name="property_menu">Property</string>
    <string name="birth_menu">Birthday ads</string>
    <string name="app_rel_menu">App Related Ads</string>
    <string name="buy_sell_menu">Buy and Sell</string>
    <string name="services_menu">Services</string>
    <string name="loan_rel_menu">Loan related</string>
    <string name="mat_rel_menu">Matrimony related</string>
    <string name="book_lit_menu">Books and Literature</string>
    <string name="other_uncat_menu">Other and Uncategorized News</string>
    <string name="ent_news_menu">Entertainment News</string>
    <string name="career_rel_menu">Career Related</string>
    <string name="job_menu">Job</string>
    <string name="business_menu">Business</string>
    <string name="edu_menu">Educational</string>
    <string-array name="article_arr">
        
        <item>National and International</item>
        <item>Government News</item>
        <item>Social and Related News</item>
        <item>Sports</item>
        <item>Science and Technology</item>
        <item>Health Related</item>
        <item>Business News</item>
        <item>Agricultural News</item>
        <item>Cinema Related</item>
        <item>Small Classifieds</item>
        <item>Other and Uncategorized News</item>
        <item>Entertainment News</item>
        <item>Career Related</item>
        <item>Economical News</item>
    </string-array>
    <string-array name="small_class_sub_category_items">
        <item>Property</item>
        <item>Birthday ads</item>
        <item>App Related Ads</item>
        <item>Buy and Sell</item>
        <item>Services</item>
        <item>Loan related</item>
        <item>Matrimony related</item>
        <item>Books and Literature</item>
    </string-array>
    <string-array name="career_related_sub_category_items">
        <item>Job</item>
        <item>Business</item>
        <item>Educational</item>
    </string-array>
    <string name="create_article_menu">Create article</string>
    <string name="change_lang_menu">Change Display Language</string>
    <string name="change_pwd_menu">Change password</string>
    <string name="log_out">Log out</string>
    <string name="home_toolbar_title">News Feed</string>
    <string name="profile_toolbar_title">Profile</string>
    <string name="about_toolbar_title">About App</string>
    <string name="button_ok">Ok</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_net_banking">NetBankingActivity</string>
    <string name="title_activity_cash_card">CashCardActivity</string>
    <string name="title_activity_emi">EmiActivity</string>
    <string name="title_activity_card">CardActivity</string>
    <string name="title_activity_user_cards">UserCardsActivity</string>
    <string name="title_activity_payments">PaymentsActivity</string>
    <string name="pay_now">Pay</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="click_here">Click here</string>
    <string name="if_cvv_and_expiry_on_card"> &#160;if you have CVV and Expiry on your card</string>
    <string name="if_dont_cvv_and_expiry_on_card"> &#160;if you don\'t have CVV and Expiry on your card</string>
    <string name="net_banking">Net Banking</string>
    <string name="title_activity_merchant_payment">MerchantPaymentActivity</string>
    <string name="title_activity_verify_api">VerifyApiActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">Test</string>
    <string name="production">Production</string>
    <string-array name="environment_array">
        <item>@string/test</item>
        <item>@string/production</item>
    </string-array>
    <string-array name="no_of_days_publishing">
        <item>30 days</item>
        <item>60 days</item>
        <item>90 days</item>
        <item>120 days</item>
    </string-array>
    <string name="app_desc">APNA NEWS App enables user to post news in multiple language. It also allows to view news posted by user.
    It helps user to post their news article. It also provides latest news in simple and easy manner.</string>
    <string name="use_live_key_in_production_environment">Please use your live merchant key in production environment</string>
    <string name="could_not_receive_data">Could not receive data</string>
    <string name="default_text_large">But I must explain to you how all this mistaken idea of denouncing of a pleasure and
        praising pain was born and I will give you a complete account of the system,
        and expound the actual teachings of the great explorer of the truth,
        the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself,
        because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that
        are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain,
        but occasionally circumstances occur in which toil and pain can procure him some great pleasure.
        To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it?
        But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who
        avoids a pain that produces no resultant pleasure?
        On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the
        charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue;
        and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through
        shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of
        choice is untrammeled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed
        and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it
        will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in
        these matters to this principle of selection: he rejects pleasures to secure other greater pleasures,
        or else he endures pains to avoid worse pains</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>