<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.org.apnanews.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/profile_image_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/upload_layout_margin"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/text"
                android:layout_gravity="center"
                android:background="@mipmap/ic_face_black_48dp"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/profile_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_medium"
                    android:hint="@string/prompt_first_name"
                    android:inputType="text"
                    android:layout_marginTop="@dimen/top_margin"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/profile_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_medium"
                    android:hint="@string/prompt_last_name"
                    android:inputType="text"
                    android:layout_marginTop="@dimen/top_margin"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_medium"
                    android:hint="@string/prompt_mail"
                    android:layout_marginTop="@dimen/top_margin"
                    android:inputType="textEmailAddress"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/profile_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_medium"
                    android:hint="@string/prompt_mobile"
                    android:layout_marginTop="@dimen/top_margin"
                    android:inputType="number"
                    android:maxLength="10"
                    />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/profile_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_medium"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:layout_marginTop="@dimen/top_margin"
                    />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/profile_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_medium"
                    android:hint="@string/prompt_confirm_password"
                    android:inputType="textPassword"
                    android:layout_marginTop="@dimen/top_margin"
                    />

            </android.support.design.widget.TextInputLayout>




            <Button
                android:textColor="@color/white"
                android:id="@+id/profile_sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:textSize="@dimen/text_medium"
                android:background="@drawable/view_corner_bg"
                android:text="@string/sign_up_text" />

            <TextView
                android:id="@+id/profile_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_login_in"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_large"
                />


        </LinearLayout>


    </ScrollView>


</RelativeLayout>
